samples/_failures_safe/1761428449_f0b909_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27578c2f.c: In function ‘main’:
./samples/SAFE/__tmp_27578c2f.c:175:9: error: expected expression at end of input
  175 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_27578c2f.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27578c2f.c:175:9: error: expected declaration or statement at end of input
